Read timeline and report events in dynaflow security analysis (#232)
* Add report from timeline file in dynaflow security analysis
* Update parameters unit tests

Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>